--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Alejandro Espinosa de los Monteros",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "socket.io": "^1.7.1"
   }
 }
